# src/_generated/typescript-fetch/models/Template.ts
@@ -1,0 +1,102 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * FastAPI
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface Template
+ */
+export interface Template {
+    /**
+     * 
+     * @type {number}
+     * @memberof Template
+     */
+    id: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof Template
+     */
+    title: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof Template
+     */
+    lastModified: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof Template
+     */
+    created: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof Template
+     */
+    html: string;
+}
+
+/**
+ * Check if a given object implements the Template interface.
+ */
+export function instanceOfTemplate(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "id" in value;
+    isInstance = isInstance && "title" in value;
+    isInstance = isInstance && "lastModified" in value;
+    isInstance = isInstance && "created" in value;
+    isInstance = isInstance && "html" in value;
+
+    return isInstance;
+}
+
+export function TemplateFromJSON(json: any): Template {
+    return TemplateFromJSONTyped(json, false);
+}
+
+export function TemplateFromJSONTyped(json: any, ignoreDiscriminator: boolean): Template {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'],
+        'title': json['title'],
+        'lastModified': json['last_modified'],
+        'created': json['created'],
+        'html': json['html'],
+    };
+}
+
+export function TemplateToJSON(value?: Template | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'id': value.id,
+        'title': value.title,
+        'last_modified': value.lastModified,
+        'created': value.created,
+        'html': value.html,
+    };
+}
+
