# src/_generated/typescript-fetch/models/TemplateNoHtml.ts
@@ -1,0 +1,93 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * FastAPI
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface TemplateNoHtml
+ */
+export interface TemplateNoHtml {
+    /**
+     * 
+     * @type {number}
+     * @memberof TemplateNoHtml
+     */
+    id: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof TemplateNoHtml
+     */
+    title: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof TemplateNoHtml
+     */
+    lastModified: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof TemplateNoHtml
+     */
+    created: number;
+}
+
+/**
+ * Check if a given object implements the TemplateNoHtml interface.
+ */
+export function instanceOfTemplateNoHtml(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "id" in value;
+    isInstance = isInstance && "title" in value;
+    isInstance = isInstance && "lastModified" in value;
+    isInstance = isInstance && "created" in value;
+
+    return isInstance;
+}
+
+export function TemplateNoHtmlFromJSON(json: any): TemplateNoHtml {
+    return TemplateNoHtmlFromJSONTyped(json, false);
+}
+
+export function TemplateNoHtmlFromJSONTyped(json: any, ignoreDiscriminator: boolean): TemplateNoHtml {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'],
+        'title': json['title'],
+        'lastModified': json['last_modified'],
+        'created': json['created'],
+    };
+}
+
+export function TemplateNoHtmlToJSON(value?: TemplateNoHtml | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'id': value.id,
+        'title': value.title,
+        'last_modified': value.lastModified,
+        'created': value.created,
+    };
+}
+
