# src/_generated/typescript-fetch/models/TemplateOnlyTitleHtml.ts
@@ -1,0 +1,75 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * FastAPI
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface TemplateOnlyTitleHtml
+ */
+export interface TemplateOnlyTitleHtml {
+    /**
+     * 
+     * @type {string}
+     * @memberof TemplateOnlyTitleHtml
+     */
+    title: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof TemplateOnlyTitleHtml
+     */
+    html: string | null;
+}
+
+/**
+ * Check if a given object implements the TemplateOnlyTitleHtml interface.
+ */
+export function instanceOfTemplateOnlyTitleHtml(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "title" in value;
+    isInstance = isInstance && "html" in value;
+
+    return isInstance;
+}
+
+export function TemplateOnlyTitleHtmlFromJSON(json: any): TemplateOnlyTitleHtml {
+    return TemplateOnlyTitleHtmlFromJSONTyped(json, false);
+}
+
+export function TemplateOnlyTitleHtmlFromJSONTyped(json: any, ignoreDiscriminator: boolean): TemplateOnlyTitleHtml {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'title': json['title'],
+        'html': json['html'],
+    };
+}
+
+export function TemplateOnlyTitleHtmlToJSON(value?: TemplateOnlyTitleHtml | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'title': value.title,
+        'html': value.html,
+    };
+}
+
