# src/_generated/typescript-fetch/models/index.ts
@@ -2,6 +2,9 @@
 /* eslint-disable */
 export * from './HTTPValidationError';
 export * from './LocationInner';
+export * from './Template';
+export * from './TemplateNoHtml';
+export * from './TemplateOnlyTitleHtml';
 export * from './TopMostRequest';
 export * from './ValidationError';
 export * from './WindowInfo';
